--- a/index.html
+++ b/index.html
@@ -2,15 +2,21 @@
 <html lang="en">
 <head>
 	<title>snavicon</title>
+	<link rel="stylesheet" href="../style.css">
 	<style type='text/css'>
-	body {
-		background-color: #000;
-		color: #FFF;
-	}
+		#cvs {
+			visibility: hidden;
+		}
 	</style>
 </head>
 <body>
-	<div>WASD to move.</div>
+	<header>
+		<span class='headertext'>Snavicon</span>
+	</header>
+
+	<section>
+		Snake in the favicon. Arrow keys to move.
+	</section>
 
 	<canvas id='cvs' width='16' height='16'></canvas>
 
