Cite prior work - 'inspired by' as in 'I couldn't figure out how to play it so I wrote this in two hours instead'

--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
 	</header>
 
 	<section>
-		Snake in the favicon. Arrow keys to move.
+		<div>
+			Snake in the favicon, inspired by <a href="http://www.p01.org/defender_of_the_favicon/">DEFENDER of the favicon</a>. Arrow keys to move.
+		</div>
 	</section>
 
 	<canvas id='cvs' width='16' height='16'></canvas>
